# racgoat

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  RELEASE_CHECKLIST.md  pyproject.toml
.claude/commands/: ep-commit.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish.yml  test.yml
.specify/memory/: constitution.md
demo/: CONTEST_SUBMISSION.md  INSTALL_TOOLS.md  NEXT_STEPS.md  SCREENSHOT_GUIDE.md  demo.tape  run_demo.sh  sample.diff
docs/: ENHANCED_MARKDOWN_FORMAT.md  LORE.md  index.md  prd.md  roadmap.md
racgoat/: __init__.py  __main__.py  constants.py  di.py  exceptions.py  main.py  utils.py
racgoat/cli/: __init__.py  args.py  main.py
racgoat/controllers/: __init__.py  comment_controller.py  quit_controller.py  search_controller.py  theme_controller.py
racgoat/models/: comments.py
racgoat/parser/: __init__.py  diff_parser.py  file_filter.py  models.py
racgoat/services/: comment_store.py  git_metadata.py  markdown_writer.py
racgoat/ui/: __init__.py  models.py
scripts/: generate_large_diff.py
specs/001-goal-create-a/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-goal-build-the/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-core-commenting-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-end-to-end/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-advanced-interaction-usability/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-performance-hardening-final/: IMPLEMENTATION_STATUS.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-currently-the-review/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py  test_goat.py
tests/contract/: test_binary_filtering.py  test_cli_custom_output.py  test_cli_default_output.py  test_cli_empty_diff.py  test_cli_invalid_args.py  test_diff_segments.py  test_edit_contract.py  test_enhanced_markdown.py  test_error_handling.py  test_generated_filtering.py  test_git_metadata.py  test_help_contract.py  test_markdown_output.py  (+3 more)
(+82 files in other folders)
