[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "racgoat"
version = "0.1.0"
description = "A TUI app that's part raccoon mischief, part goat stubbornness"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
dependencies = [
    "textual>=6.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
